Gave the admin more perms so he is now THE ADMIN
